[package]
name = "pathplanning"
version = "0.1.0"
edition = "2024"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
description = "Path planning algorithms and visualization"
repository = "https://github.com/sunsided/pathplanning"
license = "EUPL-1.2"
publish = false
keywords = ["pathfinding", "planning", "algorithms", "routing"]

[[bin]]
name = "pathplanning"
path = "src/main.rs"

[dependencies]
winit = "0.30"
vello = "0.8"
pollster = "0.4"
fast-osmpbf = { git = "https://github.com/sunsided/fast-osmpbf", branch = "feature/memmap", features = ["mmap", "io-hints"] }
ordered-float = "5"
rstar = "0.12"
space-partitioning = "0.5.0"
log = "0.4"
env_logger = "0.11"
rand = { version = "0.10", features = ["std_rng"] }
